samples/_failures_safe/1761070978_206fa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd5fed9d.c: In function ‘main’:
./samples/SAFE/__tmp_fd5fed9d.c:138:25: error: expected ‘;’ at end of input
  138 |                 return 1
      |                         ^
      |                         ;
./samples/SAFE/__tmp_fd5fed9d.c:138:17: error: expected declaration or statement at end of input
  138 |                 return 1
      |                 ^~~~~~
./samples/SAFE/__tmp_fd5fed9d.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd5fed9d.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd5fed9d.c:138:17: error: expected declaration or statement at end of input
